--- a/ecommerce/client/package.json
+++ b/ecommerce/client/package.json
@@ -14,11 +14,22 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@fontsource/roboto": "^5.1.0",
+    "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.10",
+    "@mui/lab": "^6.0.0-beta.18",
     "@mui/material": "^6.1.10",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "@reduxjs/toolkit": "^2.4.0",
+    "axios": "^1.7.9",
     "client": "file:",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^7.0.2",
+    "react-toastify": "^10.0.6",
+    "redux": "^5.0.1",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
