--- a/ecommerce/src/main/resources/application.yaml
+++ b/ecommerce/src/main/resources/application.yaml
@@ -17,7 +17,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
-        format_sql: true
+        format-sql: true
 
   data:
     redis:
